# production-code-jun

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  tasks.py
.github/workflows/: main.yml
config/: database.py  variables.py
docker/: Dockerfile.jupyter  Dockerfile.simple  Dockerfile.simple-3
migrations/: ch-init.sql  init.sql
models/: random_forest_model.joblib
notebooks/: iris.ipynb  new.ipynb  test.ipynb
scripts/: docker-install.sh  entrypoint.sh
src/: app.py  evaluate.py  inference.py  pipeline.py  preprocessing.py  train.py
tests/: test_case.json  test_preprocessing.py
