[project]
name = "production-code-jun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.4"
dependencies = [
    "black==26.5.1",
    "flask==3.1.3",
    "invoke==3.0.3",
    "ipykernel==7.3.0",
    "isort==8.0.1",
    "loguru==0.7.3",
    "matplotlib==3.11.0",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "pre-commit==4.6.0",
    "pyarrow==24.0.0",
    "pylint==4.0.6",
    "pymysql==1.1.1",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "python-dotenv==1.2.2",
    "ruff==0.15.18",
    "scikit-learn==1.9.0",
    "seaborn==0.13.2",
    "sqlalchemy==1.4.36",
]
